@@ -1,6 +1,7 @@
 package 回溯;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 import static utils.TreeUtils.*;
@@ -15,15 +16,15 @@ class 二叉树的所有路径_257 {
     //---------------------------- 回溯解法-----------------------
     public List<String> binaryTreePaths(TreeNode<Integer> root) {
         List<String> res = new ArrayList<>();
-        if (root == null) {
-            return res;
-        }
-        List<Integer> paths = new ArrayList<>();
+        LinkedList<Integer> paths = new LinkedList<>();
         binaryTreePaths(root, paths, res);
         return res;
     }
 
-    private void binaryTreePaths(TreeNode<Integer> node, List<Integer> paths, List<String> res) {
+    private void binaryTreePaths(TreeNode<Integer> node, LinkedList<Integer> paths, List<String> res) {
+        if (node == null) {
+            return;
+        }
         paths.add(node.val);
         if (node.left == null && node.right == null) { //当前节点是叶子节点，开始收集结果
             StringBuffer sb = new StringBuffer();
@@ -32,15 +33,9 @@ class 二叉树的所有路径_257 {
             }
             sb.append(paths.get(paths.size() - 1));
             res.add(sb.toString());
-            return;
         }
-        if (node.left != null) {
-            binaryTreePaths(node.left, paths, res);
-            paths.remove(paths.size() - 1); //回溯
-        }
-        if (node.right != null) {
-            binaryTreePaths(node.right, paths, res);
-            paths.remove(paths.size() - 1); //回溯
-        }
+        binaryTreePaths(node.left, paths, res);
+        binaryTreePaths(node.right, paths, res);
+        paths.removeLast();
     }
 }
